The StatusBar invisibility fixed

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -4,11 +4,11 @@
     'titleBar  titleBar  titleBar  titleBar  titleBar'  .3fr
     'topPanel  topPanel  topPanel  topPanel  topPanel'   1fr
     'content   content   content   calendar  calendar'   6fr
-    'statusBar statusBar statusBar statusBar statusBar' .3fr / 3fr 2fr;
+    'statusBar statusBar statusBar statusBar statusBar' .4fr / 3fr 2fr;
   min-height: 100vh;
   max-height: 100vh;
   overflow: hidden;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .App__TitleBar {
