--- a/src/styles/StatusBar.module.scss
+++ b/src/styles/StatusBar.module.scss
@@ -1,3 +1,4 @@
 .MainWrapper {
+  height: 100%;
   background-color: #222222;
 }
